Fix:"Resolve bugs of implementation"
